--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>Calculator</title>
   </head>
   <body>
-    
+    <div class="calculator">
+      <div class="display">
+
+      </div>
+      <div class="buttons">
+        <button value="">AC</button>
+        <button value="">C</button>
+        <button value="">+/-</button>
+        <button value="">/</button>
+        <button value="">7</button>
+        <button value="">8</button>
+        <button value="">9</button>
+        <button value="">X</button>
+        <button value="">4</button>
+        <button value="">5</button>
+        <button value="">6</button>
+        <button value="">-</button>
+        <button value="">1</button>
+        <button value="">2</button>
+        <button value="">3</button>
+        <button value="">+</button>
+        <button value="">0</button>
+        <button value="">.</button>
+        <button value="">=</button>
+      </div>
+    </div>
   </body>
 </html>
