Add positioning using flex and fixed sizes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <div class="calculator">
       <div class="display">
-
+        <div class="recent-display">120 + 120</div>
+        <div class="current-display">240</div>
       </div>
       <div class="buttons">
         <button value="">AC</button>
@@ -29,9 +30,9 @@
         <button value="">2</button>
         <button value="">3</button>
         <button value="">+</button>
-        <button value="">0</button>
-        <button value="">.</button>
-        <button value="">=</button>
+        <button value="" id="button-0" class="last-row">0</button>
+        <button value="" class="last-row">.</button>
+        <button value="" class="last-row">=</button>
       </div>
     </div>
   </body>
