Add event listeners to buttons
All buttons except '+/-' and '=' have assigned event listeners and
functions. At this moment clearAll() and clearLastChar() function
work fine, the calculator is able to perform mathematical operation,
but '=' sign isn't working and you have to clear display manually by
'C' button.

--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
   <body>
     <div class="calculator">
       <div class="display">
-        <div class="recent-display">120 + 120</div>
-        <div class="current-display">240</div>
+        <div class="recent-display"></div>
+        <div class="current-display">0</div>
       </div>
       <div class="buttons">
-        <button value="">AC</button>
-        <button value="">C</button>
-        <button value="">+/-</button>
-        <button value="">/</button>
-        <button value="">7</button>
-        <button value="">8</button>
-        <button value="">9</button>
-        <button value="">X</button>
-        <button value="">4</button>
-        <button value="">5</button>
-        <button value="">6</button>
-        <button value="">-</button>
-        <button value="">1</button>
-        <button value="">2</button>
-        <button value="">3</button>
-        <button value="">+</button>
-        <button value="" id="button-0" class="last-row">0</button>
-        <button value="" class="last-row">.</button>
-        <button value="" class="last-row">=</button>
+        <button value="AC">AC</button>
+        <button value="C">C</button>
+        <button value="+/-">+/-</button>
+        <button value="/">/</button>
+        <button value="7">7</button>
+        <button value="8">8</button>
+        <button value="9">9</button>
+        <button value="*">X</button>
+        <button value="4">4</button>
+        <button value="5">5</button>
+        <button value="6">6</button>
+        <button value="-">-</button>
+        <button value="1">1</button>
+        <button value="2">2</button>
+        <button value="3">3</button>
+        <button value="+">+</button>
+        <button value="0" id="button-0" class="last-row">0</button>
+        <button value="." class="last-row">.</button>
+        <button value="=" class="last-row">=</button>
       </div>
     </div>
   </body>
