--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="calculator">
       <div class="display">
-        <div class="recent-display"></div>
+        <div class="recent-display">&nbsp</div>
         <div class="current-display">0</div>
       </div>
       <div class="buttons">
